module navigation added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,7 @@
   </div>
   <div class="content container">
     <router-outlet></router-outlet>
+    
+    <router-outlet name="sub"></router-outlet>
   </div>
 </div>
