--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -7,7 +7,7 @@
     <fa-icon title="Søg" [icon]="faSearch"></fa-icon>
     <span class="side-bar-label">Search</span>
   </div>
-  <div class="menu-item" id="video" [routerLink]="['/videos/player']">
+  <div class="menu-item" id="video" [routerLink]="['/videos']">
     <fa-icon alt="Se Video" [icon]="faVideo"></fa-icon>
     <span class="side-bar-label">Video</span>
   </div>
