--- a/src/app/video/player/player.component.html
+++ b/src/app/video/player/player.component.html
@@ -1,4 +1,4 @@
 <h1>Video</h1>
-<div class="container">
-<video id="azuremediaplayer" class="azuremediaplayer amp-default-skin amp-big-play-centered" tabindex="0" style=""></video>
+<div class="container" style="padding-bottom: 60%">
+<video style="min-width: 100%; padding-bottom: 60%; max-height: 60%" id="azuremediaplayer" class="azuremediaplayer amp-default-skin amp-big-play-centered" tabindex="0"></video>
 </div>
