--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,4 +1,7 @@
 <div class="text-light mt-5 menu-container">
+    <div class="menu-item text-light">
+      {{ winWidth }}
+    </div>    
   <div class="menu-item">
     <fa-icon id="expand" [icon]="faArrowRight" (click)="toggleExpanded()"></fa-icon>
     <span class="side-bar-label"></span>
