--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
+<div class="hamburger" (click)="expandSidebar()"><fa-icon [icon]="faBars"></fa-icon></div>
 <div class="body">
   <div class="side-bar" id="side-bar">
     <app-sidebar></app-sidebar>
   </div>
   <div class="content container">
-    <router-outlet></router-outlet>
-    
+    <router-outlet></router-outlet> 
     <router-outlet name="sub"></router-outlet>
   </div>
 </div>
