--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,10 @@
   <div class="side-bar" id="side-bar">
     <app-sidebar></app-sidebar>
   </div>
-  <div class="content container">
-    <router-outlet></router-outlet> 
-    <router-outlet name="sub"></router-outlet>
+  <div class="content">
+    <div class="container outlet-container">
+      <router-outlet></router-outlet> 
+      <router-outlet name="sub"></router-outlet>
+    </div>
   </div>
 </div>
