--- a/src/styles.css
+++ b/src/styles.css
@@ -1,35 +1,65 @@
 /* You can add global styles to this file, and also import other style files */
 html, body {
-    background-color: #222222;
+    background-color: black;
     margin: 0;
     padding: 0;
     
 }
 
+
 .body {
     top: 0;
     bottom: 0;
     position: absolute;
-    display: flex;
-    flex-flow: row nowrap;
+    top: 0;
+    left: 0;
     width: 100%;
 }
 
+.content {
+    width: 100%;
+    height: 100%;
+    position:absolute;
+    top: 0;
+    left: 0;
+}   
+
 .side-bar {
     position: relative;
-    background-color: black;
+    background-color: rgb(15,15,15);
     width: 95px;
     min-width: 95px;
+    height: 100%;
     top: 0px;
     bottom: 0px;
     overflow: hidden;
     z-index:2;
 }
 
-.content {
-    background-color:black;
-    flex: 1;
+.outlet-container {
+    height: 100%;
 }
+
+@media(min-width: 460px){
+
+    .body {
+        position: absolute;
+        display: flex;
+        flex-flow: row nowrap;
+        width: 100%;
+        
+    }
+
+    .content {
+        position: relative;
+        top: 0;
+        left: 0;
+    }
+}
+
+
+
+
 
 .hamburger {
     position: absolute;
