--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -1,12 +1,18 @@
 
 
 .menu-container {
-    height: 60%;
+    height: 90%;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
     justify-content: space-around;
     color: rgb(112, 112, 112);
+}
+
+@media (min-height: 900px) {
+    .menu-container {
+        height: 60%;
+    }
 }
 
 .menu-item {
