--- a/src/app/video/video-home/video-home.component.css
+++ b/src/app/video/video-home/video-home.component.css
@@ -1,7 +1,13 @@
 .video-nav {
-    margin-top: 2.2em;
-    width: 100%;
+    margin: 2.2em 0 0 6em;
+}
 
+@media (min-width: 460px) {
+    .video-nav {
+        margin: 2em 0 2em 0;
+        width: 100%;
+       
+    }
 }
 
 .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link {
@@ -14,7 +20,7 @@
 .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
     background-color: black;
     border-color: rgb(255, 217, 0);
-    border-bottom-color: black;
+    border-bottom-color: black !important;
     color: rgb(255, 217, 0);
 }
 
