--- a/src/app/video/player/player.component.html
+++ b/src/app/video/player/player.component.html
@@ -1,4 +1,19 @@
-<h1>Video</h1>
-<div class="container" style="padding-bottom: 60%">
-<video style="min-width: 100%; padding-bottom: 60%; max-height: 60%" id="azuremediaplayer" class="azuremediaplayer amp-default-skin amp-big-play-centered" tabindex="0"></video>
+<div style="width:100%; height: 100%;">
+<video style="width: 100%;" 
+    id="azuremediaplayer" 
+    class="azuremediaplayer amp-default-skin amp-big-play-centered" 
+    tabindex="0">
+</video>
+<br>
+<div class="content" *ngIf="currentVideoCourse">
+    <h1>{{ currentVideoCourse.title }}</h1>
+    <hr>
+    <div class="mainInfo">
+        <span>Af: {{ currentVideoCourse?.author }}</span>
+        <span>Udgivet: {{ currentVideoCourse?.datePublished | date }}</span>
+        <span>Varighed: {{ currentVideoCourse?.duration }}</span>
+    </div>
+    <hr>
+    <div>{{ currentVideoCourse?.shortDescription }}</div>
+    </div>
 </div>
