--- a/src/app/video/video-thumbnail/video-thumbnail.component.css
+++ b/src/app/video/video-thumbnail/video-thumbnail.component.css
@@ -5,7 +5,8 @@
     font-size: 4em;
     opacity: .6;
     color: white;
-    line-height:0
+    line-height:0;
+    cursor: pointer;
 }
 
 .linkbar {
