--- a/src/app/video/player/player.component.css
+++ b/src/app/video/player/player.component.css
@@ -1,4 +1,4 @@
-.content {
+.videoDetails {
     margin-top: 3em;
     color: rgb(112,112,112);
 }
@@ -7,4 +7,6 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
+    
 }
+
