--- a/src/app/blog/home/home.component.css
+++ b/src/app/blog/home/home.component.css
@@ -5,3 +5,12 @@
     justify-content: center;
     color: rgb(112,112,122);
 }
+
+.streg {
+    width: 100%;
+    height: 3px;
+    background-color:  rgb(123, 255, 0);
+    position: absolute;
+    top: 100px;
+    left: 15px;
+}
