--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,6 +1,19 @@
+<div class="streg"></div> 
 <div class="home text-center">
     <h1>
     Login
     </h1>
+    <div class="login text-light">
+        <form novalidate [formGroup]="loginForm" (ngSubmit)="save()">
+          <div class="form-group">
+            <label for="username">Username:</label>
+            <input id="username" class="form-control" type="text" formControlName="username">
+          </div>
+          <div class="form-group">
+            <label for="pass">Password</label>
+            <input id="pass" class="form-control" type="password" formControlName="password">
+          </div>
+          <button class="btn btn-primary" type="submit">Log ind</button>
+        </form>
   </div>
   
