--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -1,6 +1,9 @@
+<div class="streg"></div>
 <div class="home text-center">
     <h1>
     Profil
     </h1>
+    <h3 *ngIf="loggedIn$ | async">Velkommen Admin</h3>
+    <h3 *ngIf="!loggedIn$ | async">Desværre, du har ikke rettigheder til denne side</h3>
   </div>
   
