Player home text

--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -3,7 +3,7 @@
     <h1>
     Login
     </h1>
-    <div class="login text-light">
+    <div class="login ng-light">
         <form novalidate [formGroup]="loginForm" (ngSubmit)="save()">
           <div class="form-group">
             <label for="username">Username:</label>
