--- a/src/app/video/create-video-course/create-video-course.component.html
+++ b/src/app/video/create-video-course/create-video-course.component.html
@@ -1,4 +1,4 @@
-<div class="createvideo text-light">
+<div class="createvideo ng-light">
   <form novalidate [formGroup]="videoCourseForm">
     <div class="form-group">
       <div class="field-top">
