--- a/src/app/video/video-thumbnail/video-thumbnail.component.html
+++ b/src/app/video/video-thumbnail/video-thumbnail.component.html
@@ -1,4 +1,4 @@
-<!-- <p class="text-light">
+<!-- <p class="ng-light">
   Name: {{ course.title  }}
   <br>
   shortDescription: {{ course.shortDescription  }}
