--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="text-light mt-5 menu-container">  
+<div class="ng-light mt-5 menu-container">  
   <div class="menu-item" id="search">
     <fa-icon title="Søg" [icon]="faSearch"></fa-icon>
     <span class="side-bar-label">Search</span>
