--- a/src/app/blog/home/home.component.html
+++ b/src/app/blog/home/home.component.html
@@ -1,8 +1,29 @@
+<div class="share">
+    <h1>Blog</h1>
+  <fa-icon [icon]="faShareAltSquare"></fa-icon>
+</div>
 
-<div class="streg"></div>
-<div class="home text-center">
-    <h1>
-    Blog Modul
-    </h1>
+<ul class="nav nav-tabs nav-fill">
+    <li class="nav-item">
+      <a class="nav-link active">Active</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link">Link</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link">Link</a>
+    </li>
+  </ul>
+
+
+<div class="page">  
+  <div class="page-content">
+    
+    <div class="page-body">
+      <h2>Velkommen til Blog-modulet</h2>
+      <p>Her er desværre endnu ingen content</p>
+    </div>
   </div>
+</div>
+  
   
