--- a/src/app/user/home/home.component.css
+++ b/src/app/user/home/home.component.css
@@ -7,15 +7,15 @@ a, a:not([href]):not([tabindex]) {
 .nav-tabs  {
     background-color: black;
     border-color: transparent;
-    border-bottom-color: rgb(123, 255, 0);
+    border-bottom-color: rgb(255, 0, 200);;
     
 }
 
 .nav-link.active {
     background-color: black;
-    border-color: rgb(123, 255, 0);
+    border-color: rgb(255, 0, 200);;
     border-bottom-color: black !important;
-    color: rgb(123, 255, 0) !important;
+    color: rgb(255, 0, 200) !important;
 }
 
 .nav-tabs .nav-link {
@@ -24,11 +24,6 @@ a, a:not([href]):not([tabindex]) {
 }
 
 .nav-link:hover {
-    border-color: rgb(123, 255, 0);
+    border-color: rgb(255, 0, 200);;
   
 }
-
-
-
-
-
