--- a/src/app/user/login/login.component.css
+++ b/src/app/user/login/login.component.css
@@ -1,22 +1,12 @@
-.home {
-    
-    height: 66%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    color: rgb(112,112,122);
-}
 
 input {
     max-width: 20em;
     margin: auto;
 }
 
-.streg {
-    width: 100%;
-    height: 3px;
-    background-color: rgb(17, 0, 255);
-    position: absolute;
-    top: 100px;
-    left: 15px;
+
+
+.btn-primary {
+    background-color: rgb(255, 0, 200);
+    border-color: rgb(155,0,80);
 }
