--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,9 +1,8 @@
-<div class="streg"></div> 
-<div class="home text-center">
-    <h1>
-    Login
-    </h1>
-    <div class="login ng-light">
+<div class="page">
+  <div class="page-content">
+
+    <div class="page-body">
+      <div class="login ng-light">
         <form novalidate [formGroup]="loginForm" (ngSubmit)="save()">
           <div class="form-group">
             <label for="username">Username:</label>
@@ -15,5 +14,7 @@
           </div>
           <button class="btn btn-primary" type="submit">Log ind</button>
         </form>
+      </div>
+    </div>
   </div>
-  
+</div>
