--- a/src/app/video/video-home-text/video-home-text.component.html
+++ b/src/app/video/video-home-text/video-home-text.component.html
@@ -1,12 +1,20 @@
-<div class="ng-light">
-  <h1>Velkommen til Video-Centralen</h1>
-  <p>
-    Herover ser du to tabs "Play" og "Alle" - hvis du logger ind som Admin får du adgang til et tredie punkt "Opret".
-  </p>
-    <ul>
-      <li>Play: Video præsentation af sitet</li>
-      <li>Alle: Liste over alle tilgængelige videos - VÆR OPMÆRKSOM PÅ EN VIS VENTETID!!!</li>
-      <li>Opret: Formular til oprettelse af nye video-poster</li>
-    </ul>
-  
+<div class="page">
+  <div class="page-content">
+
+    <div class="page-body container">
+      <h1>Velkommen til Video-Centralen</h1>
+      <p>
+        Herover ser du to tabs "Play" og "Alle" - hvis du logger ind som Admin får du adgang til et tredie punkt
+        "Opret".
+      </p>
+      <ul>
+        <li>Play: Video præsentation af sitet</li>
+        <li>Alle: Liste over alle tilgængelige videos - VÆR OPMÆRKSOM PÅ EN VIS VENTETID!!!</li>
+        <li>Opret: Formular til oprettelse af nye video-poster</li>
+      </ul>
+    </div>
+
+  </div>
 </div>
+
+
