--- a/src/app/video/videolist/videolist.component.html
+++ b/src/app/video/videolist/videolist.component.html
@@ -1,6 +1,16 @@
-<h2>List Component</h2>
-<div *ngIf="videoCourses$ | async as videoCourses" class="row">
-  <div *ngFor="let vc of videoCourses" class="col-xs-12 col-md-6 col-lg-4 mb-4">
-    <app-video-thumbnail [course]="vc"></app-video-thumbnail>
+
+
+
+<div class="page">
+  <div class="page-content">
+    <h2>Alle Videokurser</h2>
+    <div class="page-body container">
+      <div *ngIf="videoCourses$ | async as videoCourses" class="row">
+        <div *ngFor="let vc of videoCourses" class="col-xs-12 col-md-6 col-lg-4 mb-4">
+          <app-video-thumbnail [course]="vc"></app-video-thumbnail>
+        </div>
+      </div>
+    </div>
+
   </div>
 </div>
