--- a/src/styles.css
+++ b/src/styles.css
@@ -3,25 +3,29 @@ html, body {
     background-color: black;
     margin: 0;
     padding: 0;
-    
+    width: 100vw;
+    height: 100vh
 }
-
 
 .body {
     top: 0;
+    right: 0;
     bottom: 0;
-    position: absolute;
-    top: 0;
     left: 0;
-    width: 100%;
+    
+    position: absolute;
+    
+    display: flex;
+    flex-direction: row;
 }
 
 .content {
-    width: 100%;
-    height: 100%;
+    height: 100vh;
     position:absolute;
     top: 0;
-    left: 0;
+    left: 0; 
+    right: 0;
+    color: rgb(112,112,112)
 }   
 
 .side-bar {
@@ -34,33 +38,25 @@ html, body {
     bottom: 0px;
     overflow: hidden;
     z-index:2;
+    left: -95px;
 }
 
-.outlet-container {
-    height: 100%;
+.colorRuler {
+    position: relative;
+    box-sizing: border-box;
+    margin-top: 0em;
     width: 100%;
+    height: 3px;
 }
 
-@media(min-width: 460px){
-
-    .body {
-        position: absolute;
-        display: flex;
-        flex-flow: row nowrap;
-        width: 100%;
-        
+.page {
+    padding: 1em 2em 2em 2em;
     }
 
-    .content {
-        position: relative;
-        top: 0;
-        left: 0;
-    }
+.page-content {
+    padding-top: 1em;
+    text-align: center;
 }
-
-
-
-
 
 .hamburger {
     position: absolute;
@@ -74,7 +70,32 @@ html, body {
 
 }
 
-/* Altererede Bootstrap klasser*/
-.ng-light {
-    color: rgb(152,152, 152);
+
+
+@media(min-width: 460px){
+    .content {
+        left: 95px;
+        
+    }
+ 
+}
+
+
+/* Sub Module Page Styles*/
+
+.share{
+    font-size: 2.1em;
+    padding: .9em 1em 1em 3em;
+    padding-top: 0.9em;
+    padding-right: 1em;
+    width: 100%;
+    cursor: pointer;
+    color: rgb(112, 112, 112);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.page-body {
+    margin-top: 4em;
 }
