--- a/src/app/video/video-home-text/video-home-text.component.html
+++ b/src/app/video/video-home-text/video-home-text.component.html
@@ -4,12 +4,12 @@
     <div class="page-body container">
       <h1>Velkommen til Video-Centralen</h1>
       <p>
-        Herover ser du to tabs "Play" og "Alle" - hvis du logger ind som Admin får du adgang til et tredie punkt
+        Herover ser du to tabs "Introduktion" og "Vis Alle" - hvis du logger ind som Admin får du adgang til et tredie punkt
         "Opret".
       </p>
       <ul>
-        <li>Play: Video præsentation af sitet</li>
-        <li>Alle: Liste over alle tilgængelige videos - VÆR OPMÆRKSOM PÅ EN VIS VENTETID!!!</li>
+        <li>Introduktion: Video præsentation af sitet</li>
+        <li>Vis Alle: Liste over alle tilgængelige videos - VÆR OPMÆRKSOM PÅ EN VIS VENTETID!!!</li>
         <li>Opret: Formular til oprettelse af nye video-poster</li>
       </ul>
     </div>
