--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <div class="ng-light mt-5 menu-container">  
-  <div class="menu-item" id="search">
-    <fa-icon title="Søg" [icon]="faSearch"></fa-icon>
+  <div class="menu-item" id="search" style="cursor:default"> 
+    <fa-icon title="Ikke Implementeret" [icon]="faSearch"></fa-icon>
     <span class="side-bar-label">Search</span>
   </div>
   <div class="menu-item" id="video" [routerLink]="['/videos', {outlets: { sub: ['wctext'] } }]" routerLinkActive="videoActive">
