Final med demovideo

--- a/src/app/video/videolist/videolist.component.html
+++ b/src/app/video/videolist/videolist.component.html
@@ -4,6 +4,7 @@
 <div class="page">
   <div class="page-content">
     <h2>Alle Videokurser</h2>
+    ( Hav tålmodighed )
     <div class="page-body container">
       <div *ngIf="videoCourses$ | async as videoCourses" class="row">
         <div *ngFor="let vc of videoCourses" class="col-xs-12 col-md-6 col-lg-4 mb-4">
