--- a/src/app/video/video-home-text/video-home-text.component.html
+++ b/src/app/video/video-home-text/video-home-text.component.html
@@ -14,6 +14,8 @@
         <li>Opret: Formular til oprettelse af nye video-poster</li>
       </ul>
     </div>
+    <br>
+    <button class="btn btn-outline-warning" type="button" (click)="seDemo()">Se Demo Af Sitet</button>
 
   </div>
 </div>
